# gph-cmath

./: .gitignore  CMakeLists.txt  Makefile
src/: cgmath.h  cgmath.inl  cgmmat.inl  cgmmisc.inl  cgmquat.inl  cgmvec3.inl  cgmvec4.inl
test/: Makefile  test.cc
